<resources>
    <string name="app_name">NestleMilkManagementSystem</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="inventory_number">Inventory Number</string>
    <string name="device_name">Device Name</string>
    <string name="bottom_text">Any Text</string>
    <string name="register_button">Register</string>
    <string name="signin_button">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="say_hi">Hi, Nestle" "</string>
    <string name="user_type">User</string>
    <string name="status">Status</string>

    <string name="user_msa">MSA</string>
    <string name="manage_mrns">Manage MRNs</string>
    <string name="receive_milk">Receive Milk</string>
    <string name="create_mrn">Create MRN</string>
    <string name="view_mrn">View MRNs</string>
    <string name="purchase_summary">Daily Purchase Summary</string>
    <string name="transfer_milk">Transfer Milk To MT</string>
    <string name="end_of_day">End of Day</string>

    <string name="update_master_data">Update Master Data</string>
    <string name="region">Region:</string>
    <string name="selected_region">Region</string>
    <string name="last_updated">Last Updated:</string>
    <string name="lastupdated_datetime">DD-MM-YYYY"  "Hour:Min:Sec</string>
    <string name="check_updates">Check for Updates</string>
    <string name="date">Date:</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="time">Time:</string>
    <string name="hr_min_sec">Hour:Min:Sec</string>
    <string name="update_button">Update</string>
    <string name="update_info">Update Information</string>
    <string name="dont_close">Don"'"t close application while updating</string>
    <string name="cancel_button">Cancel</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="save_button">Save</string>
    <string name="transfer_button">Transfer</string>
    <string name="end_of_day_button">End of Day</string>

    <string name="mrn_num">MRN#:</string>
    <string name="selected_mrn">MRN#</string>
    <string name="location">Location:</string>
    <string name="selected_location">Location</string>
    <string name="supplier_information">Supplier Information</string>
    <string name="code">Code:</string>
    <string name="search_code">Supplier Code</string>
    <string name="supplier_name">Name:</string>
    <string name="supplier">Supplier</string>
    <string name="selected_supplier_name">Supplier Name</string>
    <string name="father_name">Father"'"s Name:</string>
    <string name="selected_father_name">Father Name</string>
    <string name="cnic">CNIC:" "</string>
    <string name="selected_cnic">xxxxx"-"xxxxxxx"-"x</string>
    <string name="supplier_type">Type:" "</string>
    <string name="selected_supplier_type">CF</string>
    <string name="supplier_code">Supplier Code</string>
    <string name="milk_measurements">Milk Measurements</string>
    <string name="purchasing_criteria">Purchasing Criteria</string>
    <string name="total_solids">Total Solids(%)</string>
    <string name="ts">TS:</string>
    <string-array name="total_solids_array">
        <item>Total Solids(%)</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string name="volume">Volume(Ltrs):</string>
    <string name="volume_range">.5"-"-"99999999.50</string>
    <string name="fat">FAT(%):</string>
    <string name="fat_range">2.00"-"-"9.99</string>
    <string name="lr_reading">LR Reading:</string>
    <string name="lr_reading_range">14.00"-"-"35.50</string>
    <string name="temperature">Temperature(C):</string>
    <string name="temperature_range">4"-"-"40</string>
    <string name="quality_measurements">Quality Measurements</string>
    <string name="organol_in_out">Organol(IN/OUT):</string>
    <string-array name="organol">
        <item>IN</item>
        <item>OUT</item>
    </string-array>
    <string name="formalin">Formalin(-/+):</string>
    <string-array name="formalin">
        <item>-ve</item>
        <item>+ve</item>
    </string-array>
    <string name="apt">APT 60"-"68%(-/+):</string>
    <string-array name="APT">
        <item>-ve</item>
        <item>+ve</item>
    </string-array>

    <string name="shift">Shift:</string>
    <string name="selected_shift">Shift Time</string>
    <string name="milk_quantity">Milk Quantity</string>
    <string name="selected_volume">Vol(Ltr)</string>
    <string name="selected_fat">FAT(%)</string>
    <string name="selected_lr">LR</string>
    <string name="snf">SNF(%):</string>
    <string name="selected_snf">SNF</string>
    <string name="selected_ts">TS</string>
    <string name="vol_at_13_ts">Vol at 13 TS(ltr):</string>
    <string name="selected_vol_ts">Vol TS</string>
    <string name="milk_quality">Milk Quality</string>
    <string name="selected_temp">Temp</string>
    <string name="selected_formalin">-ve</string>
    <string name="selected_organol">IN</string>
    <string name="selected_apt">-ve</string>

    <string name="view_mrn_details">View MRN Details</string>
    <string name="update_mrn">Update MRN</string>
    <string name="update_information">Update Information</string>
    <string name="update_reason">Update Reason:</string>
    <string-array name="update_reason_array">
        <item>Invalid Supplier</item>
        <item>Other</item>
    </string-array>
    <string name="remarks">Remarks:</string>
    <string name="remarks_here">Remarks Here Please!</string>

    <string name="daily_purchase_summary">Daily Purchase Summary</string>
    <string name="total_milk_measurements">Total Milk Measurements</string>
    <string name="morning_shift">Morning Shift</string>
    <string name="evening_shift">Evening Shift</string>
    <string name="previous_left_over_milk">Previous Left Over Milk</string>
    <string name="received_milk">Received Milk</string>
    <string name="lr">LR:</string>
    <string name="quantity">Qty(kg):</string>
    <string name="selected_qty">Quantity</string>
    <string name="fat_kg">FAT(kg):</string>
    <string name="selected_fat_kg">FAT_KG</string>
    <string name="snf_kg">SNF(kg):</string>
    <string name="selected_snf_kg">SNF_KG</string>
    <string name="transfer_milk_to_mt">Transfer Milk to MT</string>
    <string name="vol_alert_text">Vol = .5"-"99999999.50</string>
    <string name="fat_alert_text">Fat = 2"-"9.99</string>
    <string name="lr_alert_text">LR  = 14"-"35.50</string>
    <string name="temp_alert_text">Temp = 4"-"40</string>

    <string name="sheet_num">Sheet#:</string>
    <string name="selected_sheet_num">Sheet#</string>
    <string name="location_code">Location Code:</string>
    <string name="selected_location_code">Location Code</string>
    <string name="location_name">Location Name:</string>
    <string name="selected_location_name">Location Name</string>

    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="status_mrn">Status</string>
    <string name="lom_question">Is there any left over milk at this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous_day_lom">Previous Day Left Over Milk</string>
    <string name="adjusted_lr">Adjusted LR:</string>
    <string name="today_milk_purchased">Today Milk Purchased</string>
    <string name="current_day_lom">Current Day Left Over Milk</string>
    <string name="selected_item_status">A</string>

    <string name="user_mt">MT</string>
    <string name="manage_collections">Manage Collections</string>
    <string name="start_journey">Start Journey</string>
    <string name="collect_milk">Collect Milk</string>
    <string name="collections_list">View List of Collections</string>
    <string name="pickup_rejected_milk">Pickup Rejected Milk</string>
    <string name="end_journey">End Journey</string>
    <string name="view_list_of_journeys">View List of Journeys</string>

    <string name="route_info">Route Information</string>
    <string name="route_code">Route Code:</string>
    <string name="selected_route_code">Route Code</string>
    <string name="route_name">Rooute Name:</string>
    <string name="selected_route_name">Route Name</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="vehicle_code">Vehicle Code:</string>
    <string name="selected_vehicle_code">Vehicle Code</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="selected_vehicle_num">Vehicle Number</string>
    <string name="tanker_capacity">Tanker Capacity (ton):</string>
    <string name="selected_tanker_capacity">Tanker Capacity</string>

    <string name="location_info">Location Information:</string>
    <string name="travel_details">Travel Details:</string>
    <string name="kilometers">Kilometers:</string>
    <string name="selected_km">Kilometers</string>

    <string name="rejection_question">Is milk being rejected?</string>
    <string name="rejection_type">Type of rejection?</string>
    <string name="full">Full</string>
    <string name="partial">Partial</string>
    <string name="rejected_milk_quantity">Rejected Milk Quantity</string>

</resources>
